--- a/java/wewallet-common/pom.xml
+++ b/java/wewallet-common/pom.xml
@@ -68,6 +68,12 @@
 		    <artifactId>weixin-java-miniapp</artifactId>
 			<version>${wxsdk.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.4</version>
+		    <scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
