--- a/java/wewallet-common/pom.xml
+++ b/java/wewallet-common/pom.xml
@@ -74,6 +74,12 @@
 		    <version>1.18.4</version>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.3</version>
+            <classifier>jdk15</classifier>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
