--- a/java/wewallet-core/pom.xml
+++ b/java/wewallet-core/pom.xml
@@ -64,6 +64,11 @@
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
