网关初步完成，未测试

--- a/java/wewallet-gateway/pom.xml
+++ b/java/wewallet-gateway/pom.xml
@@ -55,7 +55,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>net.wzero.wewallet</groupId>
 			<artifactId>wewallet-common</artifactId>
