--- a/java/wewallet-gateway/src/main/resources/application.properties
+++ b/java/wewallet-gateway/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=wewallet
 spring.rabbitmq.password=123654
 spring.rabbitmq.virtualHost=/
+#--------- 阿里大于 ------------
+alidayu.accessKeyId=WmS6WvV6CeCYZHQI
+alidayu.accessKeySecret=HZD4qKRdRgkWDmQtXeM3gtpZTw6LFP
