--- a/java/wewallet-common/pom.xml
+++ b/java/wewallet-common/pom.xml
@@ -80,6 +80,16 @@
             <version>2.3</version>
             <classifier>jdk15</classifier>
         </dependency>
+        <dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.aliyun</groupId>
+		  <artifactId>aliyun-java-sdk-core</artifactId>
+		  <version>4.0.6</version> <!-- 注：如提示报错，先升级基础包版，无法解决可联系技术支持 -->
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
