--- a/java/wewallet-common/pom.xml
+++ b/java/wewallet-common/pom.xml
@@ -13,6 +13,7 @@
 		<java.version>1.8</java.version>
 		<version>1.5.18.RELEASE</version>
 		<wxsdk.version>3.1.0</wxsdk.version>
+		<spring-cloud.version>Edgware.SR5</spring-cloud.version>
 	</properties>
 	
 	<dependencies>
@@ -27,11 +28,6 @@
 			<version>${version}</version>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-amqp</artifactId>
-			<version>${version}</version>
-	    </dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
