--- a/java/wewallet-core/src/main/resources/application.properties
+++ b/java/wewallet-core/src/main/resources/application.properties
@@ -7,3 +7,44 @@ spring.datasource.username=wewallet
 spring.datasource.password=123654
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+#-------- redis ---------------
+redis.hostname=www.wzero.net
+redis.password=yjj123456
+redis.port=6379
+redis.timeout=3600
+#--------- RabbitMQ ---------------
+spring.rabbitmq.host=www.wzero.net
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=wewallet
+spring.rabbitmq.password=123654
+spring.rabbitmq.virtualHost=/
+#--------- Spring Cloud Stream --------------
+#----- core -----
+#----- transaction job output
+spring.cloud.stream.bindings.transferJobOutput.destination=net.wzero.wewallet.transfer.job
+spring.cloud.stream.rabbit.bindings.transferJobOutput.producer.exchangeType=fanout
+#----- transaction job callback input
+spring.cloud.stream.bindings.transferJobCallbackInput.destination=net.wzero.wewallet.transfer.job.calback
+spring.cloud.stream.rabbit.bindings.transferJobCallbackInput.consumer.exchangeType=fanout
+spring.cloud.stream.bindings.transferJobCallbackInput.group=core
+#----- sms job output
+spring.cloud.stream.bindings.smsJobOutput.destination=net.wzero.wewallet.sms
+spring.cloud.stream.rabbit.bindings.smsJobOutput.producer.exchangeType=fanout
+
+#----- worker -----
+#----- transaction job input 
+spring.cloud.stream.bindings.transferJobInput.destination=net.wzero.wewallet.transfer.job
+spring.cloud.stream.rabbit.bindings.transferJobInput.consumer.exchangeType=fanout
+spring.cloud.stream.bindings.transferJobInput.group=transfer.worker
+#----- transaction job callback output 
+spring.cloud.stream.bindings.transferJobCallbackOutput.destination=net.wzero.wewallet.transfer.job.calback
+spring.cloud.stream.rabbit.bindings.transferJobCallbackOutput.producer.exchangeType=fanout
+#----- sms job
+spring.cloud.stream.bindings.smsJobInput.destination=net.wzero.wewallet.sms
+spring.cloud.stream.rabbit.bindings.smsJobInput.consumer.exchangeType=fanout
+spring.cloud.stream.bindings.smsJobInput.group=worker
+
+#--------- 阿里大于 ------------
+alidayu.accessKeyId=
+alidayu.accessKeySecret=
