添加交易刷新接口

--- a/java/wewallet-core/src/main/resources/application.properties
+++ b/java/wewallet-core/src/main/resources/application.properties
@@ -20,19 +20,26 @@ spring.rabbitmq.username=wewallet
 spring.rabbitmq.password=123654
 spring.rabbitmq.virtualHost=/
 #--------- Spring Cloud Stream --------------
-#----- core -----
+#============ core ===================================
 #----- transaction job output
 spring.cloud.stream.bindings.transferJobOutput.destination=net.wzero.wewallet.transfer.job
 spring.cloud.stream.rabbit.bindings.transferJobOutput.producer.exchangeType=fanout
 #----- transaction job callback input
-spring.cloud.stream.bindings.transferJobCallbackInput.destination=net.wzero.wewallet.transfer.job.calback
+spring.cloud.stream.bindings.transferJobCallbackInput.destination=net.wzero.wewallet.transfer.job.callback
 spring.cloud.stream.rabbit.bindings.transferJobCallbackInput.consumer.exchangeType=fanout
 spring.cloud.stream.bindings.transferJobCallbackInput.group=core
+#----- get transaction output
+spring.cloud.stream.bindings.getTransactionReceiptOutput.destination=net.wzero.wewallet.transaction.get
+spring.cloud.stream.rabbit.bindings.getTransactionReceiptOutput.producer.exchangeType=fanout
+#----- get transaction callback input
+spring.cloud.stream.bindings.getTransactionReceiptCallbackInput.destination=net.wzero.wewallet.transaction.get.callback
+spring.cloud.stream.rabbit.bindings.getTransactionReceiptCallbackInput.consumer.exchangeType=fanout
+spring.cloud.stream.bindings.getTransactionReceiptCallbackInput.group=core
 #----- sms job output
 spring.cloud.stream.bindings.smsJobOutput.destination=net.wzero.wewallet.sms
 spring.cloud.stream.rabbit.bindings.smsJobOutput.producer.exchangeType=fanout
 
-#----- worker -----
+#============= worker =================================
 #----- transaction job input 
 spring.cloud.stream.bindings.transferJobInput.destination=net.wzero.wewallet.transfer.job
 spring.cloud.stream.rabbit.bindings.transferJobInput.consumer.exchangeType=fanout
@@ -40,7 +47,14 @@ spring.cloud.stream.bindings.transferJobInput.group=transfer.worker
 #----- transaction job callback output 
 spring.cloud.stream.bindings.transferJobCallbackOutput.destination=net.wzero.wewallet.transfer.job.calback
 spring.cloud.stream.rabbit.bindings.transferJobCallbackOutput.producer.exchangeType=fanout
-#----- sms job
+#----- get transaction input
+spring.cloud.stream.bindings.getTransactionReceiptInput.destination=net.wzero.wewallet.transaction.get
+spring.cloud.stream.rabbit.bindings.getTransactionReceiptInput.consumer.exchangeType=fanout
+spring.cloud.stream.bindings.getTransactionReceiptInput.group=worker
+#----- get transaction callback output
+spring.cloud.stream.bindings.getTransactionReceiptCallbackOutput.destination=net.wzero.wewallet.transaction.get.callback
+spring.cloud.stream.rabbit.bindings.getTransactionReceiptCallbackOutput.producer.exchangeType=fanout
+#----- sms job input
 spring.cloud.stream.bindings.smsJobInput.destination=net.wzero.wewallet.sms
 spring.cloud.stream.rabbit.bindings.smsJobInput.consumer.exchangeType=fanout
 spring.cloud.stream.bindings.smsJobInput.group=worker
