新增ether balance查询，token balance查询

--- a/java/wewallet-core/src/main/resources/application.properties
+++ b/java/wewallet-core/src/main/resources/application.properties
@@ -35,6 +35,13 @@ spring.cloud.stream.rabbit.bindings.getTransactionReceiptOutput.producer.exchang
 spring.cloud.stream.bindings.getTransactionReceiptCallbackInput.destination=net.wzero.wewallet.transaction.get.callback
 spring.cloud.stream.rabbit.bindings.getTransactionReceiptCallbackInput.consumer.exchangeType=fanout
 spring.cloud.stream.bindings.getTransactionReceiptCallbackInput.group=core
+#----- refresh job output
+spring.cloud.stream.bindings.refreshJobOutput.destination=net.wzero.wewallet.refresh.job
+spring.cloud.stream.rabbit.bindings.refreshJobOutput.producer.exchangeType=fanout
+#----- refresh job callback input
+spring.cloud.stream.bindings.refreshJobCallbackInput.destination=net.wzero.wewallet.refresh.job.callback
+spring.cloud.stream.rabbit.bindings.refreshJobCallbackInput.consumer.exchangeType=fanout
+spring.cloud.stream.bindings.refreshJobCallbackInput.group=core
 #----- sms job output
 spring.cloud.stream.bindings.smsJobOutput.destination=net.wzero.wewallet.sms
 spring.cloud.stream.rabbit.bindings.smsJobOutput.producer.exchangeType=fanout
@@ -54,6 +61,13 @@ spring.cloud.stream.bindings.getTransactionReceiptInput.group=worker
 #----- get transaction callback output
 spring.cloud.stream.bindings.getTransactionReceiptCallbackOutput.destination=net.wzero.wewallet.transaction.get.callback
 spring.cloud.stream.rabbit.bindings.getTransactionReceiptCallbackOutput.producer.exchangeType=fanout
+#----- refresh job input
+spring.cloud.stream.bindings.refreshJobInput.destination=net.wzero.wewallet.refresh.job
+spring.cloud.stream.rabbit.bindings.refreshJobInput.consumer.exchangeType=fanout
+spring.cloud.stream.bindings.refreshJobInput.group=refresh.worker
+#----- refresh job callback output
+spring.cloud.stream.bindings.refreshJobCallbackOutput.destination=net.wzero.wewallet.refresh.job.calback
+spring.cloud.stream.rabbit.bindings.refreshJobCallbackOutput.producer.exchangeType=fanout
 #----- sms job input
 spring.cloud.stream.bindings.smsJobInput.destination=net.wzero.wewallet.sms
 spring.cloud.stream.rabbit.bindings.smsJobInput.consumer.exchangeType=fanout
