--- a/java/wewallet-core/src/main/resources/application.properties
+++ b/java/wewallet-core/src/main/resources/application.properties
@@ -52,7 +52,7 @@ spring.cloud.stream.bindings.transferJobInput.destination=net.wzero.wewallet.tra
 spring.cloud.stream.rabbit.bindings.transferJobInput.consumer.exchangeType=fanout
 spring.cloud.stream.bindings.transferJobInput.group=transfer.worker
 #----- transaction job callback output 
-spring.cloud.stream.bindings.transferJobCallbackOutput.destination=net.wzero.wewallet.transfer.job.calback
+spring.cloud.stream.bindings.transferJobCallbackOutput.destination=net.wzero.wewallet.transfer.job.callback
 spring.cloud.stream.rabbit.bindings.transferJobCallbackOutput.producer.exchangeType=fanout
 #----- get transaction input
 spring.cloud.stream.bindings.getTransactionReceiptInput.destination=net.wzero.wewallet.transaction.get
@@ -66,7 +66,7 @@ spring.cloud.stream.bindings.refreshJobInput.destination=net.wzero.wewallet.refr
 spring.cloud.stream.rabbit.bindings.refreshJobInput.consumer.exchangeType=fanout
 spring.cloud.stream.bindings.refreshJobInput.group=refresh.worker
 #----- refresh job callback output
-spring.cloud.stream.bindings.refreshJobCallbackOutput.destination=net.wzero.wewallet.refresh.job.calback
+spring.cloud.stream.bindings.refreshJobCallbackOutput.destination=net.wzero.wewallet.refresh.job.callback
 spring.cloud.stream.rabbit.bindings.refreshJobCallbackOutput.producer.exchangeType=fanout
 #----- sms job input
 spring.cloud.stream.bindings.smsJobInput.destination=net.wzero.wewallet.sms
