--- a/java/wewallet-gateway/src/main/resources/application.properties
+++ b/java/wewallet-gateway/src/main/resources/application.properties
@@ -18,6 +18,11 @@ zuul.host.socket-timeout-millis=60000
 zuul.host.connect-timeout-millis=60000
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=240000
 hystrix.command.default.execution.timeout.enabled=true
+#ribbon config 防止 forwading error
+ribbon.ReadTimeout=60000
+ribbon.ConnectTimeout=60000
+ribbon.MaxAutoRetries=0
+ribbon.MaxAutoRetriesNextServer=1
 # routes to url
 zuul.routes.core.path=/core/**
 zuul.routes.core.serviceId=wewallet-core
