--- a/java/wewallet-eureka-server/src/main/resources/application-peer1.properties
+++ b/java/wewallet-eureka-server/src/main/resources/application-peer1.properties
@@ -1,10 +1,15 @@
 server.port=8001
 spring.application.name=eureka-server
 
+# eth0 172.17.0.16
+#spring.cloud.inetutils.preferred-networks[0]=eth0
+#spring.cloud.inetutils.default-ip-address=172.17.0.3
 #------eureka--------
 #不集群 就不需要注册了
 #eureka.client.register-with-eureka=true
 #eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://192.168.10.11:8002/eureka
+eureka.client.service-url.defaultZone=http://peer2:8002/eureka
 #表示将自己的IP注册到 eureka server
 eureka.instance.hostname=peer1
+#eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=peer1:${server.port}
