--- a/java/wewallet-eureka-server/src/main/resources/application-peer2.properties
+++ b/java/wewallet-eureka-server/src/main/resources/application-peer2.properties
@@ -1,10 +1,15 @@
 server.port=8002
 spring.application.name=eureka-server
 
+#spring.cloud.inetutils.preferred-networks[0]=eth1
+#spring.cloud.inetutils.default-ip-address=172.17.0.16
 #------eureka--------
 #不集群 就不需要注册了
 #eureka.client.register-with-eureka=true
 #eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://192.168.10.11:8001/eureka
+eureka.client.service-url.defaultZone=http://peer1:8001/eureka
 #表示将自己的IP注册到 eureka server
 eureka.instance.hostname=peer2
+#eureka.instance.ip-address=172.16.0.16
+#eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=peer2:${server.port}
