--- a/java/wewallet-gateway/src/main/resources/application.properties
+++ b/java/wewallet-gateway/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8011
 spring.application.name=wewallet-gateway
 
 #--------DataSource-------------
-spring.datasource.url=jdbc:mysql://www.wzero.net:3306/WeWallet?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true
-spring.datasource.username=wewallet
-spring.datasource.password=123654
+spring.datasource.url=jdbc:mysql://loacalhost:3306/eth-wallet?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
@@ -29,15 +29,15 @@ zuul.routes.core.serviceId=wewallet-core
 
 #-------- redis ---------------
 redis.hostname=www.wzero.net
-redis.password=yjj123456
+redis.password=
 redis.port=6379
 redis.timeout=3600
 #--------- RabbitMQ ---------------
 spring.rabbitmq.host=www.wzero.net
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=wewallet
-spring.rabbitmq.password=123654
+spring.rabbitmq.username=
+spring.rabbitmq.password=
 spring.rabbitmq.virtualHost=/
 #--------- 阿里大于 ------------
-alidayu.accessKeyId=WmS6WvV6CeCYZHQI
-alidayu.accessKeySecret=HZD4qKRdRgkWDmQtXeM3gtpZTw6LFP
+alidayu.accessKeyId=
+alidayu.accessKeySecret=
